--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: auto;
+    height: 100vh;
 }
 
 .section_1 img:nth-child(2),
@@ -45,9 +45,9 @@ section {
 
 .section_1 img:nth-child(3) {
     z-index: -1;
-    /* width: 100%; */
-    height: auto;
+    width: auto;
     right: 0;
+    height: 100vh;
     bottom: -10px;
 }
 
@@ -70,7 +70,7 @@ section {
 
 .section_1 .text {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     color: white;
     display: flex;
@@ -83,7 +83,13 @@ section {
     z-index: -2;
     font-weight: 900;
     opacity: 0;
-    transition: 2s;
+    transition-duration: 2s;
+    transition-property: font-size, opacity;
+}
+
+.section_1 .text.transform {
+    opacity: 1;
+    font-size: 1.8em;
 }
 
 .section_1 .text span {
@@ -254,11 +260,15 @@ section {
     padding: 20px 30px;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    opacity: 1;
     /* overflow: visible; */
 }
 
-.section_4 .judul {
+.section_4 .box .judul,
+.section_4 .box .paragraf {
     padding-bottom: 20px;
+    opacity: 1;
+    transform: translate(0, 0);
 }
 
 .bold {
@@ -266,20 +276,20 @@ section {
 }
 
 .section_4 .prok {
-    padding-top: 120px;
-    padding-left: 200px;
+    padding-top: 15%;
+    padding-left: 50px;
     display: flex;
     max-width: 800px;
     color: white;
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateX(-200px);
     transition: 2s;
 }
 
 .section_4 .prok.show,
 .section_4 .prok.pr.show {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
 }
 
 .section_4 .prokParagraf {
@@ -288,10 +298,10 @@ section {
 
 .section_4 .prok.pr {
     position: absolute;
-    right: 200px;
+    right: 50px;
     bottom: 50px;
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateX(100px);
     transition: 2s;
 }
 
@@ -312,23 +322,160 @@ section {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    display: flex;
+    width: 100%;
 }
 
-.section_5 img {
+.proklamasi {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+
+.proklamasi p {
+    max-width: 500px;
+    padding-right: 50px;
+}
+
+.section_5 .proklamasi img {
     padding-top: 100px;
     object-fit: contain;
     width: 500px;
 }
 
-.section_5 .audio img {
+.section_5 .proklamasi .audio {
+    margin-right: 44%;
+}
+
+.section_5 .proklamasi .audio img {
     width: 100px;
-    filter: brightness(1000%);
+    margin-right: 80%;
+}
+
+#toggleButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.hidden-character {
+    opacity: 0;
+    font-size: 0;
+    line-height: 0;
+    margin: 0;
+    padding: 0;
+    visibility: hidden;
+}
+
+.audio audio {
+    display: none;
+}
+
+#textTyping {
+    width: 500px;
+}
+
+.boxProk {
+    position: absolute;
+    top: 100px;
+    right: 0;
+    background-color: white;
+    width: 40%;
+    height: 28%;
+}
+
+.boxProk2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    width: 40%;
+    height: 25%;
+}
+
+.gallery-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.gallery-container img {
+    width: 200px;
+}
+
+.image {
+    right: 3%;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s;
+}
+.active {
+    opacity: 1;
+}
+
+/* Bendera */
+.bendera {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+    left: -10px;
+    right: -10px;
+    height: 100px;
+    overflow: hidden;
+}
+
+.flag {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    -webkit-box-reflect: below 15px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+    overflow: hidden;
+}
+
+.flag::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-top: 150px solid red;
+    border-bottom: 150px solid white;
+    box-sizing: border-box;
+    filter: url(#wavy);
+}
+
+.flag::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(225, 225, 225, 0.2);
+    filter: url(#wavy);
+}
+
+svg {
+    width: 0;
+    height: 0;
 }
 
 /* Media Queries */
 /* Phone */
 @media (max-width: 480px) {
+    .section_1 img,
+    .section_2 img {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: auto;
+    }
+
     .section_1 img {
         object-fit: contain;
         bottom: 0;
@@ -340,7 +487,14 @@ section {
     }
 
     .section_1 .text {
+        opacity: 0;
         font-size: 0.5em;
+        transition: 2s;
+    }
+
+    .section_1 .text.transform {
+        font-size: 1.2em;
+        opacity: 1;
     }
 
     .judul {
@@ -361,6 +515,7 @@ section {
     }
 
     .pesawat img {
+        width: 200px;
         top: 5%;
         animation-duration: 5s;
     }
@@ -429,10 +584,39 @@ section {
     .section_4 .prok.pr .prokParagraf.pp {
         padding: 0 20px 50px 20px;
     }
+
+    /* .bendera {
+        height: 100px;
+    } */
+
+    .section_5 .proklamasi {
+        padding-top: 30%;
+    }
+
+    .section_5 .proklamasi img {
+        width: 50%;
+    }
+
+    .section_5 .proklamasi .audio img {
+        width: 50px;
+    }
+
+    .image {
+        bottom: 5%;
+        right: -20%;
+    }
 }
 
 /* Tablet */
-@media (min-width: 481px) and (max-width: 1280px) {
+@media (min-width: 481px) and (max-width: 1024px) {
+    .section_1 img,
+    .section_2 img {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: auto;
+    }
+
     .section_1 img {
         object-fit: contain;
         bottom: 0;
@@ -512,5 +696,22 @@ section {
 
     .section_4 .prok.pr .prokParagraf.pp {
         padding: 0 20px 100px 20px;
+    }
+
+    .section_5 .proklamasi {
+        padding-top: 30%;
+    }
+
+    .section_5 .proklamasi img {
+        width: 50%;
+    }
+
+    .section_5 .proklamasi .audio img {
+        width: 80px;
+    }
+
+    .image {
+        bottom: 5%;
+        right: -15%;
     }
 }
