--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ section {
     background-position: center;
     background-size: cover;
     width: 100%;
+    overflow: hidden;
 }
 
 .proklamasi {
