--- a/style.css
+++ b/style.css
@@ -255,9 +255,9 @@ section {
 
 .section_4 .box {
     position: absolute;
-    left: 50px;
-    right: 50px;
-    top: -50px;
+    left: 0;
+    right: 0;
+    top: 0;
     z-index: 99;
     background-image: linear-gradient(#16161a, #242629);
     color: white;
@@ -280,7 +280,7 @@ section {
 }
 
 .section_4 .prok {
-    padding-top: 15%;
+    padding-top: 20%;
     padding-left: 50px;
     display: flex;
     max-width: 800px;
@@ -674,7 +674,7 @@ svg {
         width: 100%;
         height: auto;
         padding-left: 0;
-        padding-top: 35%;
+        padding-top: 45%;
         opacity: 0;
         transform: translate(-200px, 0);
         text-align: center;
@@ -707,6 +707,7 @@ svg {
 
     .section_4 .prok.pr .prokParagraf.pp {
         padding: 0 20px 100px 20px;
+        /* bottom: 100px; */
     }
 
     .section_5 .proklamasi {
