--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ svg {
 /* Media Queries */
 /* Phone */
 @media (max-width: 480px) {
-    body {
+    section {
         overflow-x: hidden;
     }
     .section_1 img,
